[package]
name = "rust-bybit-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix               = "0.13.1"
anyhow              = "1.0"
dotenv              = "0.15.0"
serde_json          = "1"
tungstenite         = "0.20.0"
reqwest             = { version =" 0.11.18",    features = ["json"] }
serde               = { version ="1",           features = ["derive"] }
tokio               = { version = "1",          features = ["full"] }
tokio-tungstenite   = { version = "0.20",       features = ["tokio-native-tls", "native-tls"] }
