[package]
name = "rust-bybit-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix               = "0.13.1"
anyhow              = "1.0"
base64              = "0.22.0"
dotenv              = "0.15.0"
hmac                = "0.12.1"
openssl             = "0.10.64"
serde_json          = "1"
sha2                = "0.10.8"
tungstenite         = "0.20.0"
chrono              = { version = "0.4.26",     features = ["serde"] }
reqwest             = { version =" 0.11.18",    features = ["json"] }
serde               = { version ="1",           features = ["derive"] }
tokio               = { version = "1",          features = ["full"] }
tokio-tungstenite   = { version = "0.20",       features = ["tokio-native-tls", "native-tls"] }
hex = "0.4.3"
